visit-management-v6-package/main/default/objects/Visit/fields/Visit_Wizard_Action_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Visit_Wizard_Action_Plan_Id__c</fullName>
    <description>Stores the Action Plan Id selected or created by the V6 Visit wizard.</description>
    <label>Visit Wizard Action Plan Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>