visit-management-v6-package/main/default/objects/Visit/fields/Visit_Wizard_Resume_Page__c.field-meta.xml
<CustomField>
    <fullName>Visit_Wizard_Resume_Page__c</fullName>
    <description>Stores the V6 Visit wizard page where the user last saved for later.</description>
    <label>Visit Wizard Resume Page</label>
    <length>40</length>
    <type>Text</type>
</CustomField>