visit-management-v6-package/main/default/objects/Visit/fields/Visit_Wizard_State__c.field-meta.xml
<CustomField>
    <fullName>Visit_Wizard_State__c</fullName>
    <description>Serialized V6 Visit wizard state used to resume saved visits.</description>
    <label>Visit Wizard State</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>