visit-management-v6-package/main/default/objects/Visit/recordTypes/ConnectivityFSG.recordType-meta.xml
<RecordType>
    <fullName>ConnectivityFSG</fullName>
    <active>true</active>
    <label>Connectivity (FSG)</label>
</RecordType>