visit-management-v6-package/main/default/objects/Visit/recordTypes/Dealer_Parts_Sales.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Parts_Sales</fullName>
    <active>true</active>
    <label>Dealer Parts Sales</label>
</RecordType>