visit-management-v6-package/main/default/objects/Visit/recordTypes/ExtendedWarranty_FSG.recordType-meta.xml
<RecordType>
    <fullName>ExtendedWarranty_FSG</fullName>
    <active>true</active>
    <label>Extended Warranty (FSG)</label>
</RecordType>