visit-management-v6-package/main/default/objects/Visit/recordTypes/Fleet_Parts_Sales.recordType-meta.xml
<RecordType>
    <fullName>Fleet_Parts_Sales</fullName>
    <active>true</active>
    <label>Fleet Parts Sales</label>
</RecordType>