visit-management-v6-package/main/default/objects/Visit/recordTypes/Fleet_Service.recordType-meta.xml
<RecordType>
    <fullName>Fleet_Service</fullName>
    <active>true</active>
    <label>Fleet Service</label>
</RecordType>